--- a/README
+++ b/README
@@ -1,5 +1,19 @@
 在v2.0.0的基础上创建了comments分支，该分支上提交读源码时的注释。
 
+源码分析路线
+
+EventLoop
+Channel
+PollPoller
+EPollPoller
+
+TimeId/Timer/TimerQueue
+
+eventfd
+runInLoop
+
+EventLoopThread/EventLoopThreadPool
+
 Muduo is a multithreaded C++ network library based on
 the reactor pattern.
 
